# clean-cs2vision-dataset

./: .gitignore  Cargo.toml  README.md  build_release.bat  settings.json
sample-dataset/test/labels/: black_image.txt
sample-dataset/train/labels/: ghibli_001.txt  ghibli_002.txt  ghibli_003.txt  ghibli_004.txt  ghibli_005.txt  ghibli_006.txt  ghibli_007.txt  ghibli_008.txt  ghibli_009.txt  ghibli_010.txt  image001.txt  image002.txt  image003.txt
sample-dataset/val/labels/: image001.txt  image002.txt  image003.txt
src/: app.rs  app_state.rs  config.rs  dataset.rs  file_operations.rs  image_analysis.rs  label_parser.rs  log_formatter.rs  main.rs  navigation.rs  settings.rs
src/config/: app_config.rs
src/core/: filter.rs  mod.rs
src/core/analysis/: balance_analyzer.rs  mod.rs  rebalancer.rs
src/core/dataset/: dataset.rs  label.rs  mod.rs
src/core/image/: mod.rs
src/core/operations/: file_ops.rs  mod.rs
src/infrastructure/logging/: setup.rs
src/logging/: mod.rs
src/state/: app_state.rs  mod.rs  settings.rs  undo_manager.rs
src/ui/: balance_dialog.rs  batch_dialogs.rs  filter_dialog.rs  image_renderer.rs  keyboard.rs  mod.rs  panels.rs  rebalance_dialog.rs  toast.rs
src/ui/panels/: bottom.rs  central.rs  helpers.rs  label.rs  mod.rs  top.rs
