[package]
name = "clean-cs2vision-dataset"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25"
kmeans_colors = "0.6"
palette = "0.7"
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
rfd = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
egui-phosphor = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
rand = "0.8"

